--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #999;
+  color: #fff;
 }
 a:hover {
   color: #6633ff;
@@ -120,7 +120,7 @@ ul.skills {
   background: #0399ff;
 }
 
-
+/*styles for hobbies*/
 .hobby-list{
   color: #6633ff;
   padding: 5px 10px;
@@ -134,6 +134,87 @@ ul.no-bullets{
 ul li .pic{
   width: 200px; 
   height: 200px; 
+}
+
+/*styles for resume*/
+.mainResume {
+  margin-right: 27%; 
+}
+.resume-nav {
+  background-color: silver;
+  height: 80px; 
+}
+#resume-list {
+  color: black; 
+}
+
+#changeName {
+  color: black; 
+}
+#nameResume {
+  font-size: 50px;
+  margin-top: 100px;
+  text-align: center; 
+  margin-left: 0%; 
+}
+.resume-body{
+  background-color: #D6CCA9;
+  color: black;
+}
+
+
+.listResume {
+  list-style-type: none; 
+  text-align: left; 
+  margin-left: 30%; 
+  line-height: 200%; 
+}
+#profile-text {
+  margin-left: 33%; 
+}
+
+.topicResume {
+  text-align: left; 
+  margin-left:75px; 
+  line-height: 40px; 
+  text-decoration: underline; 
+}
+a.resumeFooter {
+  color: black; 
+  text-decoration: underline; 
+}
+/*styles for contact*/
+.contact-nav {
+  background-color: peru;
+}
+.email {
+  color:yellowgreen; 
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0.2); 
+  max-width: 300px; 
+  margin: auto; 
+  text-align: center;
+}
+.title {
+  color: grey; 
+  font-size: 18px; 
+}
+button {
+  border: none; 
+  outline: 0; 
+  display: inline-block; 
+  padding: 8px; 
+  color: white; 
+  background-color: #000; 
+  text-align: center;
+  
+  width: 100%;
+  font-size: 18px; 
+}
+a {
+text-decoration: none; 
+font-size: 22px; 
 }
 
 footer {
