--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ header .profile-image {
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(5) rotate(180deg);
 }
 .tag {
   background-color: #efefef;
@@ -121,19 +121,48 @@ ul.skills {
 }
 
 /*styles for hobbies*/
-.hobby-list{
+.hobby-list {
   color: #6633ff;
   padding: 5px 10px;
   margin-top: 100px; 
   line-height: 100px; 
   font-size: 30px; 
 }
+/*try hover color change over individual list name items*/
+.play:hover {
+  color: red; 
+  transition: 1s 
+}
+.music:hover {
+  color: red; 
+  transition: 1s 
+}
+.reading:hover {
+  color: red; 
+  transition: 1s 
+}
+.cooking:hover {
+  color: red; 
+  transition: 1s 
+}
+.hiking:hover {
+  color: red; 
+  transition: 1s 
+}
+
 ul.no-bullets{
   list-style-type: none; 
 }
+
 ul li .pic{
   width: 200px; 
   height: 200px; 
+  border: dashed; 
+  border-radius: 25px; 
+  color: yellow; 
+}
+ul li .pic:hover{
+  transform: translate(30px, 20px) rotate(180deg);
 }
 
 /*styles for resume*/
