--- a/styles.css
+++ b/styles.css
@@ -235,20 +235,11 @@ a.resumeFooter {
   margin: auto; 
   text-align: center;
 }
+.picture {
+  height: 90%; 
+}
 .title {
   color: grey; 
-  font-size: 18px; 
-}
-button {
-  border: none; 
-  outline: 0; 
-  display: inline-block; 
-  padding: 8px; 
-  color: white; 
-  background-color: #000; 
-  text-align: center;
-  
-  width: 100%;
   font-size: 18px; 
 }
 a {
